# picky

./: .gitignore  Color.vala  ColorPreview.vala  PickerWindow.vala  PickyDockItem.vala  PickyDocklet.vala  PickyPreferences.vala  README.md  meson.build  picky.gresource.xml
po/: LINGUAS  POTFILES.in  docklet-picky.pot
